--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@react-navigation/native": "^6.1.10",
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +19,9 @@
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native": "^0.73.4",
+    "react-router-dom": "^6.22.0",
+    "react-router-native": "^6.22.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5",
